(feat): globally restructure and refactor the codebase
- Detangle the codebase and change how dependencies are resolved to
  allow the package to better modularize and load itself without
  introducing circular dependencies, especially when autoloads involved.

- Decouple extensions from the core and move them to their own
  subdirectory.

- Cleanup dead or no longer needed code. Refactor some helper functions
  by either, inlining them or generalizing to something more useful.

- Refresh top level comment headers and sections.

- Improve org-roam-node-at-point by allowing it to return the node from
  the preview sections in org-roam-mode based buffers.

BREAKING CHANGE: No extension will be anymore eagerly loaded by the
package. Previously org-roam.el would eagerly load org-roam-dalies, but
this is no longer the case.

Closes #1690 and closes #1686.

--- a/doc/org-roam.texi
+++ b/doc/org-roam.texi
@@ -2024,7 +2024,7 @@ instead. The exposed function to be used in extensions is @code{org-roam-capture
 
 Main entry point.
 GOTO and KEYS correspond to `org-capture' arguments.
-INFO is an alist for filling up Org-roam's capture templates.
+INFO is a plist for filling up Org-roam's capture templates.
 NODE is an `org-roam-node' construct containing information about the node.
 PROPS is a plist containing additional Org-roam properties for each template.
 TEMPLATES is a list of org-roam templates.
