--- a/doc/org-roam.texi
+++ b/doc/org-roam.texi
@@ -1223,7 +1223,7 @@ graph navigable.
 @node The roam-ref protocol
 @section The roam-ref protocol
 
-This protocol finds or creates a new note with a given @code{roam_key}:
+This protocol finds or creates a new note with a given @code{ROAM_REFS}:
 
 @image{images/roam-ref,,,,gif}
 
@@ -1247,8 +1247,7 @@ config.bind("<Ctrl-r>", "open javascript:location.href='org-protocol://roam-ref?
 @end example
 
 where @code{template} is the template key for a template in
-@code{org-roam-capture-ref-templates} (see @ref{The Templating System}). These templates
-should contain a @code{#+roam_key: $@{ref@}} in it.
+@code{org-roam-capture-ref-templates} (see @ref{The Templating System}).
 
 @node The Templating System
 @chapter The Templating System
@@ -1704,7 +1703,7 @@ documents (PDF, EPUB etc.) within Org-mode.
 
 For example, though helm-bibtex provides the ability to visit notes for
 bibliographic entries, org-roam-bibtex extends it with the ability to visit the
-file with the right @samp{#+ROAM_KEYS}.
+file with the right @code{ROAM_REFS}.
 
 @node Spaced Repetition
 @section Spaced Repetition
