--- a/doc/org-roam.texi
+++ b/doc/org-roam.texi
@@ -798,10 +798,10 @@ keybindings available. Here are several of the more useful ones:
 -@code{<TAB>}: @code{magit-section-toggle}
 @itemize
 @item
-@code{<RET>}: @code{org-roam-visit-thing}
+@code{<RET>}: @code{org-roam-buffer-visit-thing}
 @end itemize
 
-@code{org-roam-visit-thing} is a placeholder command, that is replaced by
+@code{org-roam-buffer-visit-thing} is a placeholder command, that is replaced by
 section-specific commands such as @code{org-roam-node-visit}.
 
 @node Configuring what is displayed in the buffer
@@ -1990,7 +1990,7 @@ INITIAL-INPUT is the initial minibuffer prompt value. FILTER-FN
 is a function to filter out nodes: it takes a single argument (an
 @code{org-roam-node}), and when nil is returned the node will be
 filtered out.
-SORT-FN is a function to sort nodes. See @code{org-roam-node-sort-by-file-mtime}
+SORT-FN is a function to sort nodes. See @code{org-roam-node-read-sort-by-file-mtime}
 for an example sort function.
 If REQUIRE-MATCH, the minibuffer prompt will require a match.
 @end defun
@@ -2024,7 +2024,7 @@ instead. The exposed function to be used in extensions is @code{org-roam-capture
 
 Main entry point.
 GOTO and KEYS correspond to `org-capture' arguments.
-INFO is an alist for filling up Org-roam's capture templates.
+INFO is a plist for filling up Org-roam's capture templates.
 NODE is an `org-roam-node' construct containing information about the node.
 PROPS is a plist containing additional Org-roam properties for each template.
 TEMPLATES is a list of org-roam templates.
