--- a/doc/org-roam.org
+++ b/doc/org-roam.org
@@ -308,7 +308,7 @@ is to use [[https://www.msys2.org/][MSYS2]] as at the time of this writing:
    Note that you do not need to manually set the PATH for MSYS2; the
 installer automatically takes care of it for you.
 
-4. Open Emacs and call ~M-x org-roam-setup~
+4. Open Emacs and call ~M-x org-roam-db-autosync-mode~
 
    This will automatically start compiling ~emacsql-sqlite~; you should see a
 message in minibuffer. It may take a while until compilation completes. Once
@@ -376,12 +376,12 @@ The ~file-truename~ function is only necessary when you use symbolic links
 inside ~org-roam-directory~: Org-roam does not resolve symbolic links.
 
 Next, we setup Org-roam to run functions on file changes to maintain cache
-consistency. This is achieved by running ~M-x org-roam-setup~. To ensure that
-Org-roam is available on startup, place this in your Emacs configuration:
+consistency. This is achieved by running ~M-x org-roam-db-autosync-mode~. To
+ensure that Org-roam is available on startup, place this in your Emacs
+configuration:
 
 #+begin_src emacs-lisp
-  (require 'org-roam)
-  (org-roam-setup)
+(org-roam-db-autosync-mode)
 #+end_src
 
 To build the cache manually, run ~M-x org-roam-db-sync~. Cache builds may
