--- a/doc/org-roam.texi
+++ b/doc/org-roam.texi
@@ -550,7 +550,7 @@ installer automatically takes care of it for you.
 
 @itemize
 @item
-Open Emacs and call @code{M-x org-roam-setup}
+Open Emacs and call @code{M-x org-roam-db-autosync-mode}
 
 This will automatically start compiling @code{emacsql-sqlite}; you should see a
 @end itemize
@@ -637,12 +637,12 @@ The @code{file-truename} function is only necessary when you use symbolic links
 inside @code{org-roam-directory}: Org-roam does not resolve symbolic links.
 
 Next, we setup Org-roam to run functions on file changes to maintain cache
-consistency. This is achieved by running @code{M-x org-roam-setup}. To ensure that
-Org-roam is available on startup, place this in your Emacs configuration:
+consistency. This is achieved by running @code{M-x org-roam-db-autosync-mode~}.
+To ensure that Org-roam is available on startup, place this in your Emacs
+configuration:
 
 @lisp
-(require 'org-roam)
-(org-roam-setup)
+(org-roam-db-autosync-mode)
 @end lisp
 
 To build the cache manually, run @code{M-x org-roam-db-sync}. Cache builds may
