--- a/doc/org-roam.org
+++ b/doc/org-roam.org
@@ -646,6 +646,68 @@ Org-roam also provides some functions to add or remove refs.
 
   Remove a ref from the node at point.
 
+* Citations
+
+Since version 9.5, Org has first-class support for citations. Org-roam supports
+the caching of both these in-built citations (of form ~[cite:@key]~) and [[https://github.com/jkitchin/org-ref][org-ref]]
+citations (of form cite:key).
+
+** Setup
+
+*org-ref*
+
+To ensure that org-ref citations are cached, ~org-ref~ must be loaded prior to
+calls of ~org-roam-db-sync~. This can be achieved by placing ~(require
+'org-ref)~ before ~org-roam~ is loaded, for example in the ~:init~ block of the
+Org-roam use-package declaration:
+
+#+begin_src emacs-lisp
+(use-package org-roam
+  :init
+  (require 'org-ref)
+  :config
+  ;;...
+  )
+#+end_src
+
+*org-cite*
+
+Org-cite should be loaded by default, and no additional setup should be
+required.
+
+** Using the Cached Information
+
+It is common to use take reference notes for academic papers. To designate the
+node to be the canonical node for the academic paper, we can use its unique
+citation key:
+
+#+begin_src org
+,* Probabilistic Robotics
+:PROPERTIES:
+:ID:       51b7b82c-bbb4-4822-875a-ed548cffda10
+:ROAM_REFS: @thrun2005probabilistic
+:END:
+#+end_src
+
+for ~org-cite~, or:
+
+#+begin_src org
+,* Probabilistic Robotics
+:PROPERTIES:
+:ID:       51b7b82c-bbb4-4822-875a-ed548cffda10
+:ROAM_REFS: cite:thrun2005probabilistic
+:END:
+#+end_src
+
+for ~org-ref~.
+
+When another node has a citation for that key, we can see it using the
+~Reflinks~ section of the Org-roam buffer.
+
+Extension developers may be interested in retrieving the citations within their
+notes. This information can be found within the ~citation~ table of the Org-roam
+database.
+
 * Completion
 
 Completions for Org-roam are provided via ~completion-at-point~. Org-roam
