--- a/doc/org-roam.texi
+++ b/doc/org-roam.texi
@@ -1355,7 +1355,7 @@ will be no prompt for template selection.
 @section Template Walkthrough
 
 To demonstrate the additions made to org-capture templates. Here, we explain
-the default template, reproduced below. You will find some most of the elements
+the default template, reproduced below. You will find most of the elements
 of the template are similar to @code{org-capture} templates.
 
 @lisp
