--- a/doc/org-roam.org
+++ b/doc/org-roam.org
@@ -937,7 +937,7 @@ will be no prompt for template selection.
 ** Template Walkthrough
 
 To demonstrate the additions made to org-capture templates. Here, we explain
-the default template, reproduced below. You will find some most of the elements
+the default template, reproduced below. You will find most of the elements
 of the template are similar to ~org-capture~ templates.
 
 #+BEGIN_SRC emacs-lisp
