--- a/doc/org-roam.org
+++ b/doc/org-roam.org
@@ -937,7 +937,7 @@ will be no prompt for template selection.
 ** Template Walkthrough
 
 To demonstrate the additions made to org-capture templates. Here, we explain
-the default template, reproduced below. You will find some most of the elements
+the default template, reproduced below. You will find most of the elements
 of the template are similar to ~org-capture~ templates.
 
 #+BEGIN_SRC emacs-lisp
@@ -960,7 +960,7 @@ of the template are similar to ~org-capture~ templates.
    first element of the list indicates the type of the target, the second
    element indicates the location of the captured node, and the rest of the
    elements indicate prefilled template that will be inserted and the position
-   of the point will be adjusted for. The latter behavior various from type to
+   of the point will be adjusted for. The latter behavior varies from type to
    type of the capture target.
 7. ~:unnarrowed t~ tells org-capture to show the contents for the whole file,
    rather than narrowing to just the entry. This is part of the Org-capture
